[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/admob/src/core/components/Downloads.gd" type="Script" id=1]
[ext_resource path="res://addons/admob/src/core/components/VerifyNetworkGithub.gd" type="Script" id=2]
[ext_resource path="res://addons/admob/src/core/VersionSupportedHTTPRequest.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0.109804, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[node name="Downloads" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 31.0
script = ExtResource( 1 )

[node name="Advice" type="Label" parent="."]
margin_right = 720.0
margin_bottom = 65.0
text = "This screen is just to download the AdMob plugin referring to the current version of your Godot, IT WILL NOT INSTALL.

To install you need to follow the Android or iOS installation guide clicking on the icons on top screen."
autowrap = true

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_top = 69.0
margin_right = 720.0
margin_bottom = 83.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )

[node name="AdviceAcceptDialog" type="AcceptDialog" parent="."]
margin_top = 104.0
margin_right = 500.0
margin_bottom = 162.0
popup_exclusive = true
window_title = "Alerta!"
dialog_text = "Download of %s completed! \\n%s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="."]
margin_top = 87.0
margin_right = 720.0
margin_bottom = 167.0

[node name="HTTPRequest" type="HTTPRequest" parent="TabContainer"]

[node name="Android" type="VBoxContainer" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ChangeDirectoryHBoxContainer" type="HBoxContainer" parent="TabContainer/Android"]
margin_right = 712.0
margin_bottom = 20.0

[node name="DownloadDirectoryLabel" type="Label" parent="TabContainer/Android/ChangeDirectoryHBoxContainer"]
margin_top = 3.0
margin_right = 440.0
margin_bottom = 17.0
text = "Current Download Directory: res://addons/admob/downloads/android"

[node name="AndroidChangeDirectoryButton" type="Button" parent="TabContainer/Android/ChangeDirectoryHBoxContainer"]
margin_left = 444.0
margin_right = 585.0
margin_bottom = 20.0
text = "CHANGE DIRECTORY"

[node name="AndroidOpenDirectoryButton" type="Button" parent="TabContainer/Android/ChangeDirectoryHBoxContainer"]
margin_left = 589.0
margin_right = 712.0
margin_bottom = 20.0
text = "OPEN DIRECTORY"

[node name="AndroidChangeDirectoryFileDialog" type="FileDialog" parent="TabContainer/Android/ChangeDirectoryHBoxContainer"]
margin_left = 380.0
margin_right = 780.0
margin_bottom = 250.0
rect_min_size = Vector2( 400, 250 )
window_title = "Open a Directory"
mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadAndroidTemplate" type="Button" parent="TabContainer/Android"]
margin_top = 24.0
margin_right = 712.0
margin_bottom = 44.0
text = "Download Android Template"

[node name="iOS" type="VBoxContainer" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="ChangeDirectoryHBoxContainer" type="HBoxContainer" parent="TabContainer/iOS"]
margin_right = 683.0
margin_bottom = 20.0

[node name="DownloadDirectoryLabel" type="Label" parent="TabContainer/iOS/ChangeDirectoryHBoxContainer"]
margin_top = 3.0
margin_right = 411.0
margin_bottom = 17.0
text = "Current Download Directory: res://addons/admob/downloads/ios"

[node name="iOSChangeDirectoryButton" type="Button" parent="TabContainer/iOS/ChangeDirectoryHBoxContainer"]
margin_left = 415.0
margin_right = 556.0
margin_bottom = 20.0
text = "CHANGE DIRECTORY"

[node name="iOSOpenDirectoryButton" type="Button" parent="TabContainer/iOS/ChangeDirectoryHBoxContainer"]
margin_left = 560.0
margin_right = 683.0
margin_bottom = 20.0
text = "OPEN DIRECTORY"

[node name="iOSChangeDirectoryFileDialog" type="FileDialog" parent="TabContainer/iOS/ChangeDirectoryHBoxContainer"]
margin_left = 687.0
margin_right = 1087.0
margin_bottom = 250.0
rect_min_size = Vector2( 400, 250 )
window_title = "Open a Directory"
mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadiOSTemplate" type="Button" parent="TabContainer/iOS"]
margin_top = 24.0
margin_right = 683.0
margin_bottom = 44.0
text = "Download iOS Template"

[node name="DownloadGoogleMobileAdsSdkiOS" type="Button" parent="TabContainer/iOS"]
margin_top = 48.0
margin_right = 683.0
margin_bottom = 68.0
text = "Download GoogleMobileAdsSdkiOS"

[node name="DontHaveConnectionPanelContainer" type="PanelContainer" parent="."]
visible = false
margin_top = 219.0
margin_right = 720.0
margin_bottom = 263.0

[node name="Label" type="RichTextLabel" parent="DontHaveConnectionPanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 713.0
margin_bottom = 37.0
bbcode_enabled = true
bbcode_text = "[b]You don't have connection to the Server: %s, please verify your connection in order to Download[/b]"
text = "You don't have connection to the Server: https://github.com/, please verify your connection in order to Download"
fit_content_height = true
scroll_active = false

[node name="VerifyNetworkGithub" type="HTTPRequest" parent="."]
script = ExtResource( 2 )

[node name="VerifyAgainTimer" type="Timer" parent="VerifyNetworkGithub"]
wait_time = 60.0
autostart = true

[node name="VersionSupportedHTTPRequest" parent="." instance=ExtResource( 3 )]

[connection signal="request_completed" from="TabContainer/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="TabContainer/Android/ChangeDirectoryHBoxContainer/AndroidChangeDirectoryButton" to="." method="_on_AndroidChangeDirectoryButton_pressed"]
[connection signal="pressed" from="TabContainer/Android/ChangeDirectoryHBoxContainer/AndroidOpenDirectoryButton" to="." method="_on_AndroidOpenDirectoryButton_pressed"]
[connection signal="dir_selected" from="TabContainer/Android/ChangeDirectoryHBoxContainer/AndroidChangeDirectoryFileDialog" to="." method="_on_AndroidChangeDirectoryFileDialog_dir_selected"]
[connection signal="pressed" from="TabContainer/Android/DownloadAndroidTemplate" to="." method="_on_DownloadAndroidTemplate_pressed"]
[connection signal="pressed" from="TabContainer/iOS/ChangeDirectoryHBoxContainer/iOSChangeDirectoryButton" to="." method="_on_iOSChangeDirectoryButton_pressed"]
[connection signal="pressed" from="TabContainer/iOS/ChangeDirectoryHBoxContainer/iOSOpenDirectoryButton" to="." method="_on_iOSOpenDirectoryButton_pressed"]
[connection signal="dir_selected" from="TabContainer/iOS/ChangeDirectoryHBoxContainer/iOSChangeDirectoryFileDialog" to="." method="_on_iOSChangeDirectoryFileDialog_dir_selected"]
[connection signal="pressed" from="TabContainer/iOS/DownloadiOSTemplate" to="." method="_on_DownloadiOSTemplate_pressed"]
[connection signal="pressed" from="TabContainer/iOS/DownloadGoogleMobileAdsSdkiOS" to="." method="_on_DownloadGoogleMobileAdsSdkiOS_pressed"]
[connection signal="network_status_changed" from="VerifyNetworkGithub" to="." method="_on_VerifyNetworkGithub_network_status_changed"]
[connection signal="request_completed" from="VerifyNetworkGithub" to="VerifyNetworkGithub" method="_on_VerifyNetworkGithub_request_completed"]
[connection signal="timeout" from="VerifyNetworkGithub/VerifyAgainTimer" to="VerifyNetworkGithub" method="_on_VerifyAgainTimer_timeout"]
[connection signal="supported_version_changed" from="VersionSupportedHTTPRequest" to="." method="_on_VersionSupportedHTTPRequest_supported_version_changed"]
